--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,3 +15,19 @@ code {
 main {
     min-height: 80vh;
 }
+/* .contentHolder {
+    width: 80%;
+    margin: 0 auto;
+} */
+/* span.badge {
+    vertical-align: middle;
+} */
+/* 
+a {
+    vertical-align: middle;
+} */
+
+#cartItemNo {
+    display: flex;
+    align-items: center;
+}
